    in our compile lines, we use config.h (like normal people).  =:)  This
    very well may break stuff, but it looks good thus far....

  - adding AM_MAINTAINER_MODE to stop the ever-annoying "here, let me run
    aclocal for you again!!" idiocy of automake and friends

  - fixing things for multi-head displays--replacing
    "getScreenInfo(0)->getRootWindow()," with
    "getCurrentScreenInfo()->getRootWindow(),"

  - removing kludgy C command-line configurator with much-improved perl script
    from Damien Tougas (thanks!!!)

  - changing bbkeys.cc to look for bbkeysconf.pl rather than bbkeysConfigC

  - removing showAllWorkspaces from bbkeys.{bb,nobb} config file and making it
    an additional keybinding.  This allows two different ways of showing all
    open windows and navigating through them--one keybinding for the regular
    "NextWindow" variety (as in previous versions of bbkeys, and another
    keybinding, "NextWindowAllWorkspaces", that pops up the window list for
    navigation for windows open on all workspaces. 

version 0.8.3 --
  - changing external app launch order--we go bbconf, bbkeysconf,
    bbkeysConfigGtk, rxvt, xterm... *phew*

  - fix in stackmenu.cc (hopefully we got it this time?) to fix segfaults
    on some platforms due to screwy X stuff. *shudder*


version 0.8.2 --

  - patched for matrix-style workspace navigation, updating the 0.3.5 patch written
    by Markus Ottenbacher (m.ottenbacher@gmx.de) found at
    http://homepages.compuserve.de/meottenbacher/.  Include UpWorkspace,
    DownWorkspace, LeftWorkspace and RightWorkspace as WithAction() in your
    ~/.bbkeysrc, and enable the arrangement in rows and columns in your
    bbkeys.bb as well as in bbpager.bb (usually placed under
    /usr/local/share/bbtools/) to use this functionality.  Bill Beal <beal@tunl.duke.edu>

  - fixed a bug due to an improper test for next and prev (test for key
    release).  next and prev might just be 0, so we can't do if (next)